--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/index/index",
     "pages/mine/index",
-    "pages/BulletinDetails/index"
+    "pages/BulletinDetails/index",
+    "pages/Login/index"
   ],
   "window": {},
   "rendererOptions": {
