'feat:完成个人信息页面布局'

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,7 +3,8 @@
     "pages/home/index",
     "pages/mine/index",
     "pages/BulletinDetails/index",
-    "pages/Login/index"
+    "pages/Login/index",
+    "pages/perfect/perfect"
   ],
   "window": {},
   "rendererOptions": {
