'feat:完成我的房屋页面布局'

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -4,7 +4,8 @@
     "pages/mine/index",
     "pages/BulletinDetails/index",
     "pages/Login/index",
-    "pages/perfect/perfect"
+    "pages/perfect/perfect",
+    "pages/House/index"
   ],
   "window": {},
   "rendererOptions": {
