--- a/project.private.config.json
+++ b/project.private.config.json
@@ -9,15 +9,8 @@
     "miniprogram": {
       "list": [
         {
-          "name": "pages/mine/index",
-          "pathName": "pages/mine/index",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "pages/perfect/perfect",
-          "pathName": "pages/perfect/perfect",
+          "name": "pages/House/index",
+          "pathName": "pages/House/index",
           "query": "",
           "launchMode": "default",
           "scene": null
