--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -7,7 +7,8 @@
     "pages/perfect/perfect",
     "pages/House/index",
     "pages/HouseInfo/index",
-    "pages/Visitor/index"
+    "pages/Visitor/index",
+    "pages/NewCommunity/index"
   ],
   "window": {},
   "rendererOptions": {
