--- a/project.private.config.json
+++ b/project.private.config.json
@@ -9,16 +9,9 @@
     "miniprogram": {
       "list": [
         {
-          "name": "pages/Visitor/index",
-          "pathName": "pages/Visitor/index",
+          "name": "pages/NewCommunity/index",
+          "pathName": "pages/NewCommunity/index",
           "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "pages/HouseInfo/index",
-          "pathName": "pages/HouseInfo/index",
-          "query": "Id=7021068090867712",
           "launchMode": "default",
           "scene": null
         },
