--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -8,7 +8,10 @@
     "pages/House/index",
     "pages/HouseInfo/index",
     "pages/Visitor/index",
-    "pages/NewCommunity/index"
+    "pages/NewCommunity/index",
+    "pages/community/building/building",
+    "pages/community/room/room",
+    "pages/community/NewRoom/NewRoom"
   ],
   "window": {},
   "rendererOptions": {
@@ -39,5 +42,14 @@
   },
   "componentFramework": "glass-easel",
   "sitemapLocation": "sitemap.json",
-  "lazyCodeLoading": "requiredComponents"
+  "lazyCodeLoading": "requiredComponents",
+  "requiredPrivateInfos": [
+    "getLocation",
+    "chooseLocation"
+  ],
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  }
 }
