--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "@vant/weapp": "^1.11.5"
+    "@vant/weapp": "^1.11.5",
+    "wechat-http": "^0.0.8"
   },
   "devDependencies": {
     "miniprogram-api-typings": "^2.12.0"
