'feat:完成我的报修全部功能'

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -11,7 +11,9 @@
     "pages/NewCommunity/index",
     "pages/community/building/building",
     "pages/community/room/room",
-    "pages/community/NewRoom/NewRoom"
+    "pages/community/NewRoom/NewRoom",
+    "pages/repair/repair",
+    "pages/addRepaire/index"
   ],
   "window": {},
   "rendererOptions": {
