'feat:我的访客全部功能'

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -13,7 +13,9 @@
     "pages/community/room/room",
     "pages/community/NewRoom/NewRoom",
     "pages/repair/repair",
-    "pages/addRepaire/index"
+    "pages/addRepaire/index",
+    "pages/visitorRecords/index",
+    "pages/code/code"
   ],
   "window": {},
   "rendererOptions": {
