'feat:完成我的报修详情页面功能'

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -9,15 +9,8 @@
     "miniprogram": {
       "list": [
         {
-          "name": "pages/code/code",
-          "pathName": "pages/code/code",
-          "query": "id=7022353365504000",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "pages/visitorRecords/index",
-          "pathName": "pages/visitorRecords/index",
+          "name": "pages/repair/repair",
+          "pathName": "pages/repair/repair",
           "query": "",
           "launchMode": "default",
           "scene": null
